Add smart version detection
This commit changes the behavior of `jenv add` and `jenv
global|local|shell [version]`

Previously, jenv add would add "short" aliases of the version. For
example, adding Zulu JDK 11.0.3 would add the following aliases:
* 11
* 11.0
* 11.0.3
* zulu64-11.0.3

This was very convenient in that it prevented you from needing to type
`jenv version zulu64-11.0.3` to change versions, but led to some
confusion among users. See issues #345, #326, #300, #268, etc.

It also made `jenv versions` very verbose if you had a lot of versions.

This commit addresses this by adding "smart" version detection when
running `jenv global|local|shell [version]`, allowing you to run:

$ jenv global 11      # Change to JDK 11
$ jenv global 11.0.2  # Change to JDK 11.0.2
$ jenv local zulu     # Change to Zulu JDK
$ jenv shell x86_64   # Change to x86_64 architecture

With all of these commands, `jenv` will attempt to avoid changing the
other properties. So if the current global version is a Temurin JDK 11,
and you run `jenv global 18`, it will change to a Temurin JDK 18
(assuming you have one installed). If instead you run `jenv global zulu`
it will change to a Zulu JDK 11.

With this change, `jenv add` no longer adds the short version aliases.

The old aliases still work, but users may want to remove those aliases
if they are no longer useful. The aliases take priority over the smart
behavior.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -3,6 +3,7 @@ from centos:7
 RUN yum install -y https://cdn.azul.com/zulu/bin/zulu18.30.11-ca-jdk18.0.1-linux.x86_64.rpm
 RUN yum install -y https://cdn.azul.com/zulu/bin/zulu18.28.13-ca-jdk18.0.0-linux.i686.rpm
 RUN yum install -y https://cdn.azul.com/zulu/bin/zulu11.56.19-ca-jdk11.0.15-linux.x86_64.rpm
+RUN yum install -y https://cdn.azul.com/zulu/bin/zulu11.56.19-ca-jdk11.0.15-linux.i686.rpm
 RUN yum install -y java-11-openjdk.x86_64
 RUN yum install -y java-1.6.0-openjdk.x86_64
 RUN yum install -y java-1.7.0-openjdk.x86_64
